--- a/index.html
+++ b/index.html
@@ -5,119 +5,123 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Студия</title>
+    <link rel="preconnect" href="https://fonts.googleap is.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link href="./css/style.css" rel="stylesheet">
 </head>
 <body>
     <header> 
-    <a href="">WebStudio</a>
-    <nav>
-        <ul>
-            <li>
-                <a href="">Судия</a>                
+    <a href="./index.html" target="_blank" rel="noopener nofollow noreferrer" class="logo"><span>Web</span>Studio</a>
+    <nav class="nav">
+        <ul class="nav-list">
+            <li class="nav-list-item">
+                <a href="./index.html" target="_blank" rel="noopener nofollow norefefrer" class="nav-list-link">Судия</a>                
             </li>
-            <li>
-                <a href="">Портфолио</a>               
+            <li class="nav-list-item">
+                <a href="./portfolio.html" target="_blank" rel="noopener nofollow norefefrer" class="nav-list-link">Портфолио</a>               
             </li>
-            <li>
-                <a href="">Контакты</a>                
+            <li class="nav-list-item">
+                <a href="" class="nav-list-link">Контакты</a>                
             </li>
         </ul>
     </nav>
-    <div>
-        <ul>
-            <li>
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+    <div class="contact">
+        <ul class="contact-list">
+            <li class="contact-list-item">
+                <a href="mailto:info@devstudio.com" class="contact-email">info@devstudio.com</a>
             </li>
-            <li>
-                <a href="tel:+380961111111">+38 096 111 11 11</a>
+            <li class="contact-list-item">
+                <a href="tel:+380961111111" class="contact-tel">+38 096 111 11 11</a>
             </li>
         </ul>
     </div>        
     </header>
     <main>
-        <!--Main call to action-->
-        <section>
-            <h1>Эффективные решения для вашего бизнеса</h1>
-            <button type="button">Заказать услугу</button>
+        <!--Hero-->
+        <section class="hero">
+            <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+            <button type="button" class="hero-btn">Заказать услугу</button>
         </section>
         <!--Adantages-->
-    <section>
+    <section class="advantage">
         <h2 hidden>Скрытый заголовок</h2>
-            <ul>
-                <li>
-                    <h3>Внимание к деталям</h3>
-                        <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+            <ul class="advantage-list">
+                <li class="advantage-list-item">
+                    <h3 class="adv-item-title">Внимание к деталям</h3>
+                        <p class="adv-item-description">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
-                <li>
-                    <h3>Пунктуальность</h3>
-                        <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                <li class="advantage-list-item">
+                    <h3 class="adv-item-title">Пунктуальность</h3>
+                        <p class="adv-item-description">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
-                <li>
-                    <h3>Планирование</h3>
-                        <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                <li class="advantage-list-item">
+                    <h3 class="adv-item-title">Планирование</h3>
+                        <p class="adv-item-description">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
-                <li>
-                    <h3>Современные технологии</h3>
-                        <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                <li class="advantage-list-item">
+                    <h3 class="adv-item-title">Современные технологии</h3>
+                        <p class="adv-item-description">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
     </section>
     <!--Services-->
-    <section>
+    <section class="service">
         <h2 hidden>Srvices</h2>
-        <ul>
-            <li>
+        <ul class="service-list">
+            <li class="service-list-item">
                 <img src="./images/architecture-designing.jpg" alt="Планирование архитектуры" width="370">
             </li>
-            <li>
+            <li class="service-list-item">
                 <img src="./images/mobile-adaptivity.jpg" alt="Фото с мобильным" width="370">
             </li>
-            <li>
+            <li class="service-list-item">
                 <img src="./images/laptop-support.jpg" alt="Фото с планшетом" width="370">
             </li>
         </ul>
     </section>
     <!--Team-->
-    <section>
-        <h2>Наша команда</h2>
-        <ul>
-            <li>
+    <section class="team">
+        <h2 class="team-title">Наша команда</h2>
+        <ul class="team-list">
+            <li class="team-list-item">
                 <img src="./images/team/team-ihor-demianenko.jpg" alt="Игорь Демьяненко" width="270">
-                <h3>Игорь Демьяненко</h3>
-                <p>Product Designer</p> 
+                <h3 class="team-item-name">Игорь Демьяненко</h3>
+                <p class="team-item-role">Product Designer</p> 
             </li>
-            <li>
+            <li class="team-list-item">
                 <img src="./images/team/team-olha-repina.jpg" alt="Ольга Репина" width="270">
-                <h3>Ольга Репина</h3>
-                <p>Frontend Developer</p>
+                <h3 class="team-item-name">Ольга Репина</h3>
+                <p class="team-item-role">Frontend Developer</p>
             </li>
-            <li>
+            <li class="team-list-item">
                 <img src="./images/team/team-nikolay-tarasov.jpg" alt="Николай Тарасов" width="270">
-                <h3>Николай Тарасов</h3>
-                <p>Marketing</p>
+                <h3 class="team-item-name">Николай Тарасов</h3>
+                <p class="team-item-role">Marketing</p>
             </li>
-            <li>
+            <li class="team-list-item">
                 <img src="./images/team/team-mikhail-ermakov.jpg" alt="Михаил Ермаков" width="270">
-                <h3>Михаил Ермаков</h3>
-                <p>UI Designer</p>
+                <h3 class="team-item-name">Михаил Ермаков</h3>
+                <p class="team-item-role">UI Designer</p>
             </li>            
         </ul>
     </section>
+    </main>
     <footer>
-        <a href="">WebStudio</a>
+        <a href="./index.html" target="_blank" rel="noopener nofollow noreferrer" class="logo"><span>Web</span><span class="alt-logo-color">Studio</span></a>
         <address>
             <ul>
-                <li>
-                    <a href="https://goo.gl/maps/hRLSiNobRwddrWGr8" target="_blank" rel="noopener noindex nofollow">г. Киев, пр-т Леси Украинки, 26</a>
+                <li class="adress-list-item">
+                    <a href="https://goo.gl/maps/hRLSiNobRwddrWGr8" target="_blank" rel="noopener noindex nofollow" class="footer-address">г. Киев, пр-т Леси Украинки, 26</a>
                 </li>
-                <li>
-                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <li class="adress-list-item">
+                    <a href="mailto:info@devstudio.com" class="footer-email">info@devstudio.com</a>
                 </li>
-                <li>
-                    <a href="tel:+380991111111">+38 099 111 11 11</a>
+                <li class="adress-list-item">
+                    <a href="tel:+380991111111" class="footer-tel">+38 099 111 11 11</a>
                 </li>
             </ul>         
         </address>
-    </main>
     </footer>       
 </body>
 </html>
